Blender crashes when to to_track_quat() called without arguments #70177

Closed
opened 2019-09-23 07:59:36 +02:00 by nBurn · 7 comments
Member

Blender Version
Broken: 2.80 (release, Windows), 2.81 September 22, 23:12:41 - 52bdf522af (daily build, Windows)
Worked: 2.79b (Windows x64)

Short description of error

Blender crashes if to to_track_quat is called on a Vector from the Python API without arguments. This is the error message printed in the console:

Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00...
Module  : C:\etc\blender-2.80-win64\blender.exe

Exact steps for others to reproduce the error
Run the following from Blender's Python console or text editor:

import mathutils
my_vec = mathutils.Vector()
my_vec.to_track_quat()

Additional notes
This looks to be a possible regression as running the same code in 2.79 only resulted in an error message:

Traceback (most recent call last):
  File "\test unit", line 3, in <module>
ValueError: only X, -X, Y, -Y, Z or -Z for track axis
Error: Python script fail, look in the console for now...
**Blender Version** Broken: 2.80 (release, Windows), 2.81 September 22, 23:12:41 - 52bdf522afcd (daily build, Windows) Worked: 2.79b (Windows x64) **Short description of error** Blender crashes if to `to_track_quat` is called on a Vector from the Python API without arguments. This is the error message printed in the console: ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00... Module : C:\etc\blender-2.80-win64\blender.exe ``` **Exact steps for others to reproduce the error** Run the following from Blender's Python console or text editor: ``` import mathutils my_vec = mathutils.Vector() my_vec.to_track_quat() ``` **Additional notes** This looks to be a possible regression as running the same code in 2.79 only resulted in an error message: ``` Traceback (most recent call last): File "\test unit", line 3, in <module> ValueError: only X, -X, Y, -Y, Z or -Z for track axis Error: Python script fail, look in the console for now... ```
Author
Member

Added subscriber: @nBurn

Added subscriber: @nBurn
Jacques Lucke self-assigned this 2019-09-23 09:44:05 +02:00
Member

Added subscriber: @jesterking

Added subscriber: @jesterking
Member

Here a callstack from the crash

 	python37.dll!00007ffa05df6165()	Unknown
 	blender.exe!bpy_class_call(bContext * C=0x000001ded6b26428, PointerRNA * ptr=0x000000dd32fff490, FunctionRNA * func=0x00007ff79768c760, ParameterList * parms=0x000000dd32fff4a8) Line 8321	C
 	blender.exe!rna_operator_execute_cb(bContext * C=0x000001ded6b26428, wmOperator * op=0x000001deed0a06a8) Line 1299	C
 	blender.exe!wm_operator_invoke(bContext * C=0x000001ded6b26428, wmOperatorType * ot=0x000001ded737d1a8, wmEvent * event=0x000001dee6af8b28, PointerRNA * properties, ReportList * reports=0x0000000000000000, const bool poll_only=false, bool use_last_properties) Line 1453	C
 	blender.exe!wm_handler_operator_call(bContext * C=0x000001ded6b26428, ListBase * handlers=0x000001ded7724770, wmEventHandler * handler_base, wmEvent * event=0x000001dee6af8b28, PointerRNA * properties=0x000001dee6935988) Line 2281	C
 	blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C=0x000001ded6b26428, wmEvent * event=0x000001dee6af8b28, ListBase * handlers=0x000001ded7724770, wmEventHandler_Keymap * handler=0x000001deed35d778, wmKeyMap * keymap=0x000001dee68b09a8, const bool do_debug_handler) Line 2590	C
 	blender.exe!wm_handlers_do_intern(bContext * C=0x000001ded6b26428, wmEvent * event=0x000001dee6af8b28, ListBase * handlers=0x000001ded7724770) Line 2727	C
 	blender.exe!wm_handlers_do(bContext * C=0x000001ded6b26428, wmEvent * event=0x000001dee6af8b28, ListBase * handlers=0x000001ded7724770) Line 2989	C
 	blender.exe!wm_event_do_handlers(bContext * C=0x000001ded6b26428) Line 3442	C
 	blender.exe!WM_main(bContext * C=0x000001ded6b26428) Line 420	C
 	blender.exe!main(int argc=1, const unsigned char * * UNUSED_argv_c=0x0000000000000000) Line 493	C
 	[Inline Frame] blender.exe!invoke_main() Line 78	C++
 	blender.exe!__scrt_common_main_seh() Line 288	C++
 	kernel32.dll!BaseThreadInitThunk()	Unknown
 	ntdll.dll!RtlUserThreadStart()	Unknown
Here a callstack from the crash ```> blender.exe!Vector_to_track_quat(VectorObject * self=0x000001dee564bb38, _object * args) Line 715 C python37.dll!00007ffa05df6165() Unknown blender.exe!bpy_class_call(bContext * C=0x000001ded6b26428, PointerRNA * ptr=0x000000dd32fff490, FunctionRNA * func=0x00007ff79768c760, ParameterList * parms=0x000000dd32fff4a8) Line 8321 C blender.exe!rna_operator_execute_cb(bContext * C=0x000001ded6b26428, wmOperator * op=0x000001deed0a06a8) Line 1299 C blender.exe!wm_operator_invoke(bContext * C=0x000001ded6b26428, wmOperatorType * ot=0x000001ded737d1a8, wmEvent * event=0x000001dee6af8b28, PointerRNA * properties, ReportList * reports=0x0000000000000000, const bool poll_only=false, bool use_last_properties) Line 1453 C blender.exe!wm_handler_operator_call(bContext * C=0x000001ded6b26428, ListBase * handlers=0x000001ded7724770, wmEventHandler * handler_base, wmEvent * event=0x000001dee6af8b28, PointerRNA * properties=0x000001dee6935988) Line 2281 C blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C=0x000001ded6b26428, wmEvent * event=0x000001dee6af8b28, ListBase * handlers=0x000001ded7724770, wmEventHandler_Keymap * handler=0x000001deed35d778, wmKeyMap * keymap=0x000001dee68b09a8, const bool do_debug_handler) Line 2590 C blender.exe!wm_handlers_do_intern(bContext * C=0x000001ded6b26428, wmEvent * event=0x000001dee6af8b28, ListBase * handlers=0x000001ded7724770) Line 2727 C blender.exe!wm_handlers_do(bContext * C=0x000001ded6b26428, wmEvent * event=0x000001dee6af8b28, ListBase * handlers=0x000001ded7724770) Line 2989 C blender.exe!wm_event_do_handlers(bContext * C=0x000001ded6b26428) Line 3442 C blender.exe!WM_main(bContext * C=0x000001ded6b26428) Line 420 C blender.exe!main(int argc=1, const unsigned char * * UNUSED_argv_c=0x0000000000000000) Line 493 C [Inline Frame] blender.exe!invoke_main() Line 78 C++ blender.exe!__scrt_common_main_seh() Line 288 C++ kernel32.dll!BaseThreadInitThunk() Unknown ntdll.dll!RtlUserThreadStart() Unknown ```

This issue was referenced by 4987f28ed2

This issue was referenced by 4987f28ed248de44e5fc00f197012bed45514ca1
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Can't redo the crash. I get the same error as 2.79.

Can't redo the crash. I get the same error as 2.79.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70177
No description provided.