Fix T70177: Crash when calling to_track_quat() without arguments